Change in document structure in intro
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@245 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -391,5 +391,4 @@ for these models are:
 of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside pure EFT results;
 \end{itemize}
 
-\newthought{Model implementation discussed in the appendix}
-%CD: what is this?
+\newthought{Model implementation discussed in Appendix~\ref{}}
