--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -207,15 +207,14 @@ but are recommended for all \MET{}+X searches.
 Details of the implementation of these models in
 Monte Carlo generators are provided in
 Appendix \ref{app:MonojetLikeModels_Appendix}.
-Chapter~\ref{subsec:DMHFModels} describes the specific details of the general models
-for final states including heavy flavor quarks, leaving the implementation
-details to appendix~\ref{app:TTBar_Xsecs}.  
+%Chapter~\ref{subsec:DMHFModels} describes the specific details of the general models
+%for final states including heavy flavor quarks, leaving the implementation
+%details to appendix~\ref{app:TTBar_Xsecs}.  
 Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
-recommendations and choices for final states containing an electroweak 
-boson ($W/Z/\gamma/H$). 
-Simplified models from chapter~\ref{subsec:MonojetLikeModels}
-are considered, together with specific simplified models leading to mono-boson signatures
-and contact interaction operators wherever simplified models are not available. 
+recommendations and choices for final states specifically containing an electroweak 
+boson ($W/Z/\gamma/H$). In this case, both
+simplified models leading to mono-boson signatures
+and contact interaction operators wherever simplified models are not available are considered. 
 The final chapter is devoted to the treatment of the validity of benchmark
 models from contact interaction operators.
 The technical implementation and further models that can be studied
