--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1714,3 +1714,137 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1310.0358;%%",
 }
+
+@article{Campbell:2003dd,
+      author         = "Campbell, John M. and Ellis, R. Keith and Maltoni, F. and
+                        Willenbrock, S.",
+      title          = "{Associated production of a $Z$ Boson and a single heavy
+                        quark jet}",
+      journal        = "Phys.Rev.",
+      volume         = "D69",
+      pages          = "074021",
+      doi            = "10.1103/PhysRevD.69.074021",
+      year           = "2004",
+      eprint         = "hep-ph/0312024",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ANL-HEP-PR-03-104, FERMILAB-PUB-03-378-T, RM3-TH-03-17,
+                        ILL-TH-03-10, NSF-KITP-03-98",
+      SLACcitation   = "%%CITATION = HEP-PH/0312024;%%",
+}
+@article{Maltoni:2005wd,
+      author         = "Maltoni, Fabio and McElmurry, Thomas and Willenbrock,
+                        Scott",
+      title          = "{Inclusive production of a Higgs or $Z$ boson in
+                        association with heavy quarks}",
+      journal        = "Phys.Rev.",
+      volume         = "D72",
+      pages          = "074024",
+      doi            = "10.1103/PhysRevD.72.074024",
+      year           = "2005",
+      eprint         = "hep-ph/0505014",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2005-076",
+      SLACcitation   = "%%CITATION = HEP-PH/0505014;%%",
+}
+@article{Campbell:2005zv,
+      author         = "Campbell, John M. and Ellis, R. Keith and Maltoni, F. and
+                        Willenbrock, S.",
+      title          = "{Production of a $Z$ boson and two jets with one
+                        heavy-quark tag}",
+      journal        = "Phys.Rev.",
+      volume         = "D73",
+      pages          = "054007",
+      doi            = "10.1103/PhysRevD.77.019903, 10.1103/PhysRevD.73.054007",
+      year           = "2006",
+      eprint         = "hep-ph/0510362",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-05-487-T, ILL-TH-05-04",
+      SLACcitation   = "%%CITATION = HEP-PH/0510362;%%",
+}
+
+
+@article{Chatrchyan:2014dha,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Measurement of the production cross sections for a Z
+                        boson and one or more b jets in pp collisions at sqrt(s) =
+                        7 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1406",
+      pages          = "120",
+      doi            = "10.1007/JHEP06(2014)120",
+      year           = "2014",
+      eprint         = "1402.1521",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SMP-13-004, CERN-PH-EP-2014-005",
+      SLACcitation   = "%%CITATION = ARXIV:1402.1521;%%",
+}
+ 
+%\cite{CMS_Zb}
+@article{Chatrchyan:2012vr,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Measurement of the Z/$\gamma$*+b-jet cross section in pp
+                        collisions at $\sqrt{s}$ = 7 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1206",
+      pages          = "126",
+      doi            = "10.1007/JHEP06(2012)126",
+      year           = "2012",
+      eprint         = "1204.1643",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EWK-11-012, CERN-PH-EP-2012-049",
+      SLACcitation   = "%%CITATION = ARXIV:1204.1643;%%",
+} 
+%\cite{CMS_Zbhadrons}
+@article{Chatrchyan:2013zja,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Measurement of the cross section and angular
+                        correlations for associated production of a Z boson with b
+                        hadrons in pp collisions at $\sqrt{s} =$ 7 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1312",
+      pages          = "039",
+      doi            = "10.1007/JHEP12(2013)039",
+      year           = "2013",
+      eprint         = "1310.1349",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EWK-11-015, CERN-PH-EP-2013-153",
+      SLACcitation   = "%%CITATION = ARXIV:1310.1349;%%",
+}
+%\cite{CMS_HIG15001}
+@article{CMS:2015mba,
+      author         = "CMS Collaboration",
+      title          = "{Search for H/A decaying into Z+A/H, with Z to ll and A/H
+                        to fermion pair}",
+      collaboration  = "CMS",
+      year           = "2015",
+      reportNumber   = "CMS-PAS-HIG-15-001",
+      SLACcitation   = "%%CITATION = CMS-PAS-HIG-15-001 ETC.;%%",
+}
+%\cite{Zb_NLO}
+@article{Frederix:2011qg,
+      author         = "Frederix, Rikkert and Frixione, Stefano and Hirschi,
+                        Valentin and Maltoni, Fabio and Pittau, Roberto and
+                        others",
+      title          = "{W and $Z/\gamma*$ boson production in association with a
+                        bottom-antibottom pair}",
+      journal        = "JHEP",
+      volume         = "1109",
+      pages          = "061",
+      doi            = "10.1007/JHEP09(2011)061",
+      year           = "2011",
+      eprint         = "1106.6019",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2011-147, CP3-11-20, NSF-KITP-11-114,
+                        ZH-TH-13-11",
+      SLACcitation   = "%%CITATION = ARXIV:1106.6019;%%",
+}
