--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -795,9 +795,17 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
+
+@misc{ForumSVN_DMS,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator, with gluon loop}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
 @misc{ForumSVN_DMV,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}",
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
@@ -807,13 +815,6 @@
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_DMV/}",
 	year = {2015}, 
 	note = "[Online; accessed 15-May-2015]"
-}
-
-@misc{ForumSVN_DMS,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
-	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_TChannel,
@@ -853,7 +854,7 @@
 
 @misc{ForumSVN_EWEFTD7,
 	title = {{SVN repository for Madgraph inputs for dimension-7 EFT models with direct DM-EW boson couplings}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Fermion_D7/}",
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Fermion_D7/contributed_by_Renjie_Wang/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
